feat: add base image